--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 
 <plugin id="cordova-plugin-elgin-minipdv"
-    version="0.0.2"
+    version="0.0.3"
     xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android">
     
@@ -9,6 +9,8 @@
     <js-module name="main" src="www/main.js">
         <clobbers target="cordova.plugins.elgin.minipdv" />
     </js-module>
+
+    <dependency id="cordova-plugin-androidx-adapter" version="1.1.3" />
 
     <!--android-->   
     <platform name="android">
@@ -18,6 +20,8 @@
                 <param name="onload" value="true" />
 
             </feature>
+
+              <preference name="AndroidXEnabled" value="true" />
         </config-file>
 
         <config-file parent="/*" target="AndroidManifest.xml">
@@ -27,14 +31,16 @@
         <!-- executable source code > -->
         <source-file src="src/android/MainActivity.java" target-dir="src/cordova-plugin-m8/cordova-plugin-m8" />
         
-
-
+      
+        
         <framework src="src/build.gradle" custom="true" type="gradleReference" />
         
         <!-- Lib Files -->
         <resource-file src="src/libs/minipdvm8.aar" target="libs/minipdvm8.aar" />
-        <resource-file src="src/libs/e1-v1.0.6-release.aar" target="libs/e1-v1.0.6-release.aar" />
+        <resource-file src="src/libs/e1-v1.0.16-release.aar" target="libs/e1-v1.0.16-release.aar" />
 
     </platform>
     
+
+
     </plugin>
