--- a/src/build.gradle
+++ b/src/build.gradle
@@ -8,18 +8,17 @@ repositories {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    //To remove design inconsistency error on Ionic
-    implementation 'com.android.support:design:28.0.0'
-
-    //Printer libs
-    implementation(name: 'e1-v1.0.6-release', ext: 'aar')
+    //Bibliotecas Elgin para utilização das funcionalidades dos minipdv`s
+    implementation(name: 'e1-v1.0.16-release', ext: 'aar')
     implementation(name: 'minipdvm8', ext: 'aar')
 
-    //Barcode loading libs
-  //  implementation('com.journeyapps:zxing-android-embedded:3.4.0')
-    //implementation 'com.google.zxing:core:3.4.0'
-
-    //Barcode library
+    //Biblioteca de suporte dos códigos de barras utilizada para impressão dos mesmos
     implementation 'com.google.zxing:core:3.3.2'
 
+    //A lib e1 na versão 1.0.16 depende do suporte do androidx na inicialização
+    implementation "androidx.startup:startup-runtime:1.0.0"
+
+    //Em alguns frameworks (como o Ionic), pode ser necessário a definição de alguns atributos de cor utilizado por algumas das libs já incluidas, para evitar qualquer inconsistência nesse sentido
+    //adicionamos a implementação desses atributos em específicos, assim não será necessário que o plugin depende de alguma dependência como app-compat ou similares.
+    implementation 'com.android.support:design:28.0.0'
 }
